# SIri-All-Mighty

./: .gitignore  LICENSE  MEMORY.md  README.md  Siri All-Mighty Workspace.code-workspace  Siri.py  Siri2.py  current_session.json  log.txt  mcp_server_json_tool.json  note.txt  pyproject.toml  requirements-backup.txt  siri_func_memory.json  siri_memory.json  siri_user_memory.json  system_function_prompt.txt  system_prompt.txt  telebot.py  test.py  test.txt  test2.py  test3.py  water.txt
SETUP/: TELE_CHAT_ID.py
functions/: README.md  STT.py  Siri_mcp_server.py  agent_call.py  call_function.py  delete_convo.py  delete_file.py  eleven_call.py  execute_tool_call.py  mcp_server.py  mcp_server_json_tool.json  mcp_tools_creation.py  memory.py  sessions.py  terminal_access.py  tool.py  wake.py  write_file.py
functions/functions/: sessions.py
~/~/: bot.txt
