[project]
name = "siri"
version = "0.1.0"
description = "This project is a Siri-alternative but is like Openclaw, aptly named 'Siri All-Mighty'."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq",
    "dotenv",
    "requests",
    "elevenlabs",
    "blobs",
    "google-genai",
    "ollama",
    "pynput",
    "python-dotenv",
    "mcp",
    "pyaudio",
    "numpy>=2.5.0",
    "sounddevice",
    "scipy",
    "setuptools>=82.0.1",
    "webrtcvad-wheels>=2.0.14",
    "python-telegram-bot>=22.8",
    "mem0ai>=2.0.12",
    "onnxruntime<1.20",
    "chromadb>=1.5.9",
    "fastembed>=0.4.2",
]
